[gd_scene format=3 uid="uid://bblu0rpf6g8gr"]

[ext_resource type="Script" uid="uid://oklhl6mmisk0" path="res://multiplayer_test.gd" id="1_3fc8k"]
[ext_resource type="PackedScene" uid="uid://b745n63hyq5qd" path="res://basic_player.tscn" id="2_sjw14"]

[node name="Multiplayer_Test" type="Node2D" unique_id=568863245]
script = ExtResource("1_3fc8k")
player_scene = ExtResource("2_sjw14")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="." unique_id=2042927122]
_spawnable_scenes = PackedStringArray("uid://b745n63hyq5qd")
spawn_path = NodePath("..")

[node name="FirstUI" type="CanvasLayer" parent="." unique_id=1451327823]

[node name="host" type="Button" parent="FirstUI" unique_id=484438811]
offset_left = 87.0
offset_top = 94.0
offset_right = 155.0
offset_bottom = 125.0
text = "Host
"

[node name="join" type="Button" parent="FirstUI" unique_id=2126260149]
offset_left = 107.0
offset_top = 373.0
offset_right = 175.0
offset_bottom = 404.0
text = "join"

[node name="IPInput" type="LineEdit" parent="FirstUI" unique_id=1440281496]
offset_left = 88.0
offset_top = 156.0
offset_right = 603.0
offset_bottom = 218.0
size_flags_horizontal = 3
placeholder_text = "paste your IP Address(IPv4, Local IP), to play with your friends!"

[node name="SecondUI" type="CanvasLayer" parent="." unique_id=842149067]

[node name="disconnect" type="Button" parent="SecondUI" unique_id=1778182056]
offset_left = 233.0
offset_top = 94.0
offset_right = 325.0
offset_bottom = 125.0
text = "disconnect"

[node name="PrintBug" type="Button" parent="SecondUI" unique_id=1328903195]
offset_left = 458.0
offset_top = 89.0
offset_right = 663.0
offset_bottom = 124.0
text = "No bug is found"

[connection signal="pressed" from="FirstUI/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="FirstUI/join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="SecondUI/disconnect" to="." method="_on_disconnect_pressed"]
